
* Wed Sep 29 08:54:00 2004, pabs <pabs@pablotron.org>
  * added COPYING
  * added ChangeLog
  * added technorati.gemspec
  * technorati.rb: documentation cleanup (finished adding keys)
  * README: added intro, isntall, requirements
  * TODO: marked one item off