@@ -6,3 +6,7 @@
   * technorati.rb: documentation cleanup (finished adding keys)
   * README: added intro, isntall, requirements
   * TODO: marked one item off
+
+* Wed Sep 29 10:08:12 2004, pabs <pabs@pablotron.org>
+  * added examples/referrer_rss.rb
+  * technorati.rb: removed debugging output
